; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/extr_flv-output.c_flv_output_destroy.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/extr_flv-output.c_flv_output_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.flv_output = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @flv_output_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @flv_output_destroy(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.flv_output*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.flv_output*
  store %struct.flv_output* %5, %struct.flv_output** %3, align 8
  %6 = load %struct.flv_output*, %struct.flv_output** %3, align 8
  %7 = getelementptr inbounds %struct.flv_output, %struct.flv_output* %6, i32 0, i32 1
  %8 = call i32 @pthread_mutex_destroy(i32* %7)
  %9 = load %struct.flv_output*, %struct.flv_output** %3, align 8
  %10 = getelementptr inbounds %struct.flv_output, %struct.flv_output* %9, i32 0, i32 0
  %11 = call i32 @dstr_free(i32* %10)
  %12 = load %struct.flv_output*, %struct.flv_output** %3, align 8
  %13 = call i32 @bfree(%struct.flv_output* %12)
  ret void
}

declare dso_local i32 @pthread_mutex_destroy(i32*) #1

declare dso_local i32 @dstr_free(i32*) #1

declare dso_local i32 @bfree(%struct.flv_output*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
